@@ -2,7 +2,7 @@
 use strict; use warnings;
 use Data::Dumper;
 
-use Test::More tests=>1;
+use Test::More tests=>2;
 
 use Sub::Curried;
 
